# python-ssl-tofu

./: README.md  client.py  pyproject.toml  server.py
certs/: cert.pem  key.rsa
