[project]
name = "python-ssl"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "fjebaker", email = "fergusbkr@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "jedi>=0.19.1",
]
[tool.pdm]
distribution = false
